<resources>
    <string name="app_name">FlexMusic</string>
    <string name="nav_main_page">Home</string>
    <string name="nav_my">My</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_recent">Recent</string>
    <string name="nav_local">Local</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_settings">Settings</string>
    <string name="home_title">Discover Music</string>
    <string name="home_featured">Featured</string>
    <string name="home_trending">Trending Now</string>
    <string name="home_trending_card">trending</string>
    <string name="home_daily_recommend">daily\nrecommend</string>
    <string name="home_top_list">top list</string>
    <string name="home_recently_played">- recently played</string>
    <string name="home_new_releases">New Releases</string>
    <string name="home_recommended_for_you">Recommended for You</string>
    <string name="home_top_playlists">Top Playlists</string>
    <string name="home_genres">Genres</string>
    <string name="home_artists">Artists</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_subtitle">Tracks you liked and revisit often</string>
    <string name="favorites_card_title">Your liked songs collection</string>
    <string name="favorites_empty">No favorites yet</string>
    <string name="favorites_empty_description">Like songs to add them to your favorites</string>
    <string name="favorites_discover">Discover Music</string>
    <string name="favorites_search_hint">Search liked songs</string>
    <string name="favorites_tab_songs">Songs</string>
    <string name="favorites_tab_albums">Albums</string>
    <string name="favorites_tab_artists">Artists</string>
    <string name="favorites_tab_radios">Radios</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="favorite_radios_empty">No favorite radios yet</string>
    <string name="favorite_radios_empty_description">Like a station while it is playing to pin it here</string>
    <string name="recent_title">Recent</string>
    <string name="recent_subtitle">Your playback footprint by day</string>
    <string name="recent_card_title">Playback history timeline</string>
    <string name="recent_empty">No recent plays</string>
    <string name="recent_empty_description">Start playing music to see your history</string>
    <string name="recent_browse">Browse Music</string>
    <string name="recent_today">Today</string>
    <string name="recent_yesterday">Yesterday</string>
    <string name="recent_this_week">This Week</string>
    <string name="recent_this_month">This Month</string>
    <string name="recent_earlier">Earlier</string>
    <string name="local_title">Local Music</string>
    <string name="local_subtitle">Manage songs from your device storage</string>
    <string name="local_songs">Songs</string>
    <string name="local_albums">Albums</string>
    <string name="local_artists">Artists</string>
    <string name="local_empty">No local music</string>
    <string name="local_empty_description">Add music files to your device to see them here</string>
    <string name="local_scan">Scan for Music</string>
    <string name="local_upload_short">Upload Files</string>
    <string name="local_scanning">Scanning…</string>
    <string name="local_scan_secondary">Scan device</string>
    <string name="local_tab_artist">Artist</string>
    <string name="local_tab_album">Album</string>
    <string name="local_tab_folder">Folder</string>
    <string name="local_tab_playlists">Playlists</string>
    <string name="playlists_title">My Playlists</string>
    <string name="playlists_empty">No playlists</string>
    <string name="playlists_empty_description">Create a playlist to organize your music</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Description</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="songs_count">%d songs</string>
    <string name="playlist_meta_with_description">%1$s • %2$d songs</string>
    <string name="playlist_song_added">Added to playlist</string>
    <string name="playlist_song_exists">This song is already in the playlist</string>
    <string name="playlist_choose_target">Choose Playlist</string>
    <string name="playlist_create_and_add">Create Playlist</string>
    <string name="playlist_name_required">Playlist name is required</string>
    <string name="playlist_detail_header">Playlist</string>
    <string name="playlist_detail_badge">CURATED SELECTION</string>
    <string name="playlist_detail_play_all">Play All</string>
    <string name="playlist_detail_collected_songs">Collected Songs</string>
    <string name="playlist_detail_summary">%1$d tracks • %2$s</string>
    <string name="playlist_detail_add_to_other_playlist">Add to Other Playlist</string>
    <string name="playlist_detail_remove_song">Remove from Playlist</string>
    <string name="playlist_detail_removed">Removed from playlist</string>
    <string name="playlist_detail_no_other_playlists">Create another playlist first</string>
    <string name="playlist_detail_empty_songs">This playlist has no songs yet</string>
    <string name="settings_title">Settings</string>
    <string name="settings_audio">Audio</string>
    <string name="settings_transcode">Transcode</string>
    <string name="settings_download">Download</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_about">About</string>
    <string name="settings_audio_quality">Audio Quality</string>
    <string name="settings_audio_quality_high">High</string>
    <string name="settings_audio_quality_medium">Medium</string>
    <string name="settings_audio_quality_low">Low</string>
    <string name="settings_equalizer">Equalizer</string>
    <string name="settings_crossfade">Crossfade</string>
    <string name="settings_crossfade_off">Off</string>
    <string name="settings_crossfade_seconds">%d seconds</string>
    <string name="settings_transcode_enabled">Enable Transcoding</string>
    <string name="settings_transcode_format">Output Format</string>
    <string name="settings_transcode_format_mp3">MP3</string>
    <string name="settings_transcode_format_vorbis">Vorbis</string>
    <string name="settings_transcode_format_flac">FLAC</string>
    <string name="settings_transcode_bitrate">Bitrate</string>
    <string name="settings_transcode_bitrate_128">128 kbps</string>
    <string name="settings_transcode_bitrate_192">192 kbps</string>
    <string name="settings_transcode_bitrate_256">256 kbps</string>
    <string name="settings_transcode_bitrate_320">320 kbps</string>
    <string name="settings_transcode_sample_rate">Sample Rate</string>
    <string name="settings_transcode_sample_rate_441">44.1 kHz</string>
    <string name="settings_transcode_sample_rate_48">48 kHz</string>
    <string name="settings_transcode_sample_rate_96">96 kHz</string>
    <string name="settings_download_enabled">Enable Downloads</string>
    <string name="settings_download_wifi_only">Download on Wi-Fi Only</string>
    <string name="settings_download_quality">Download Quality</string>
    <string name="settings_download_location">Download Location</string>
    <string name="settings_clear_cache">Clear Cache</string>
    <string name="settings_cache_size">Cache Size</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_auto">Auto</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_system">System</string>
    <string name="settings_version">Version</string>
    <string name="settings_rate_app">Rate App</string>
    <string name="settings_feedback">Send Feedback</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="player_title">Now Playing</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_stop">Stop</string>
    <string name="player_play_mode">Playback Mode</string>
    <string name="player_next">Next</string>
    <string name="player_previous">Previous</string>
    <string name="player_shuffle">Shuffle</string>
    <string name="player_shuffle_on">Shuffle On</string>
    <string name="player_repeat">Repeat</string>
    <string name="player_repeat_off">Repeat Off</string>
    <string name="player_repeat_all">Repeat All</string>
    <string name="player_repeat_one">Single Loop</string>
    <string name="player_queue">Queue</string>
    <string name="player_add_to_queue">Add to Queue</string>
    <string name="player_lyrics">Lyrics</string>
    <string name="player_now_playing_header">NOW PLAYING</string>
    <string name="player_lyrics_header">LYRICS</string>
    <string name="player_action_like">LIKE</string>
    <string name="player_action_save">SAVE</string>
    <string name="player_action_chat">CHAT</string>
    <string name="player_queue_title">Now Playing Queue</string>
    <string name="player_queue_empty">No songs in the current queue.</string>
    <string name="player_queue_placeholder">Queue management is not connected yet.</string>
    <string name="player_save_placeholder">Save action is reserved for download / playlist logic.</string>
    <string name="player_playback_error">Unable to play this source right now.</string>
    <string name="player_no_lyrics">No synced lyrics available for this song.</string>
    <string name="player_loading_lyrics">Loading lyrics…</string>
    <string name="player_loading_status">loading...</string>
    <string name="player_buffering_after_seek">Buffering, please wait.</string>
    <string name="player_menu_add_to_playlist">Add to Playlist</string>
    <string name="player_menu_share">Share</string>
    <string name="player_menu_speed">Speed: %1$sx</string>
    <string name="player_menu_audio_effect">Sound Effect: %1$s</string>
    <string name="player_speed_title">Playback Speed</string>
    <string name="player_audio_effect_title">Sound Effect</string>
    <string name="player_audio_effect_off">Off</string>
    <string name="player_audio_effect_bass_boost">Bass Boost</string>
    <string name="player_audio_effect_vocal_boost">Vocal Boost</string>
    <string name="player_audio_effect_treble_boost">Treble Boost</string>
    <string name="player_audio_effect_warm">Warm</string>
    <string name="player_audio_effect_bright">Bright</string>
    <string name="player_audio_effect_acoustic">Acoustic</string>
    <string name="player_audio_effect_podcast">Podcast</string>
    <string name="player_audio_effect_night">Night Listening</string>
    <string name="player_audio_effect_applied">Sound effect set to %1$s.</string>
    <string name="player_mode_shuffle">Shuffle Play</string>
    <string name="player_mode_order">Sequential Play</string>
    <string name="player_mode_single_loop">Single Loop</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="account_email">Email</string>
    <string name="account_password">Password</string>
    <string name="account_username_optional">Username (optional)</string>
    <string name="account_avatar">Avatar</string>
    <string name="account_select_avatar">Choose Avatar</string>
    <string name="account_avatar_not_selected">No new avatar selected</string>
</resources>